# oneilsh-llm-tools-tests

./: Makefile  README.md  custom_thought_agent_explore.ipynb  griptape.txt  griptape_explore.ipynb  langchain_apichain_test.ipynb  langchain_openapi_agentoolkit_test.ipynb  langchain_openapiendpointchain_test.ipynb  langflow_monarch_wrapper.json  monarch_wrapper_docs.txt  oai_functions_explore.ipynb  openapi.json  pyproject.toml  requirements.txt
