[tool.poetry]
name = "llm-tools-explore"
version = "0.1.0"
description = ""
authors = ["Shawn O'Neil <oneilsh@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
jupyter = "^1.0.0"
asteval = "^0.9.29"
openai = "^0.27.7"
python-dotenv = "^1.0.0"
colorlog = "^6.7.0"
griptape = "^0.10.2"
griptape-tools = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
